[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/trainer_dialogue_ui.gd" id="1"]

[node name="TrainerDialogueUI" type="CanvasLayer"]
layer = 14
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Trainer Name"
horizontal_alignment = 1

[node name="TextLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Dialogue text here..."
autowrap_mode = 2
horizontal_alignment = 1

[node name="OkButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "OK"

[node name="ButtonRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="AcceptButton" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
text = "Accept Challenge!"

[node name="DeclineButton" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
text = "Not Now"
